--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
           'gtm.start': new Date().getTime(),
           event: 'gtm.js'
         })
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l !== 'dataLayer' ? '&l=' + l : ''
+        var f = d.getElementsByTagName(s)[0]
+        var j = d.createElement(s)
+        var dl = l !== 'dataLayer' ? '&l=' + l : ''
         j.async = true
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
