Update description meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,12 @@
       })(window, document, 'script', 'dataLayer', 'GTM-KWBQS6V')
     </script>
 
-    <meta name="description" content="Dhruv Bhanushali - software developer & other things">
+    <meta name="description" content="Hi! I am Dhruv Bhanushali, a software developer who writes well-documented code, builds accessible interfaces and ships delightful apps.">
 
     <meta property="og:title" content="Dhruv Bhanushali">
     <meta property="og:image" content="https://dhruvkb.github.io/meta/cover.png">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Dhruv Bhanushali - software developer & other things">
+    <meta property="og:description" content="Hi! I am Dhruv Bhanushali, a software developer who writes well-documented code, builds accessible interfaces and ships delightful apps.">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@dhruvkb_">
