Update links on the landing page

--- a/public/index.html
+++ b/public/index.html
@@ -131,9 +131,9 @@
           Dhruv Bhanushali
         </h1>
         <p>
-          Here are my résumés, as a
-          <a href="./developer.pdf">software developer</a> and as a
-          <a href="./writer.pdf">technical writer</a>.
+          Here is my
+          <a href="./cover.pdf">cover letter</a> and my
+          <a href="./resume.pdf">résumé</a>.
         </p>
         <p>
           But they're no match for my interactive portfolio.
